--- a/src/assets/styles/_reset.scss
+++ b/src/assets/styles/_reset.scss
@@ -18,8 +18,24 @@ input::-webkit-contacts-auto-fill-button {
   right: 0;
 }
 
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 30px white inset;
+}
+
 button {
   outline: 0 !important;
+  border: none;
+  margin: 0;
+  padding: 0;
+  width: auto;
+  overflow: visible;
+  background: transparent;
+  color: inherit;
+  font: inherit;
+  line-height: normal;
+  -webkit-font-smoothing: inherit;
+  -moz-osx-font-smoothing: inherit;
+  -webkit-appearance: none;
 }
 
 textarea {
