--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <main class="sm-main">
+  <sm-signup></sm-signup>
   <div class="sm-main__text">
-    <button (click)="!panelState ? open(): close()">{{panelState}}</button>
-
     <span class="sm-main__title">{{title}}</span>
     <span class="sm-main__sentence"><sup>“</sup>{{sentence}}<sup>“</sup></span>
     <span class="sm-main__author">{{author}}</span>
