--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,36 +6,46 @@
   width: 100%;
   height: 100%;
   display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
-  flex-direction: column;
+  justify-content: space-between;
+
+  sm-signup {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    z-index: 1;
+
+    @include media-breakpoint-up(lg) {
+      width: 550px;
+      min-width: 550px;
+      position: relative;
+    }
+  }
 
   &__text {
     display: flex;
+    justify-content: flex-end;
     flex-direction: column;
     text-align: center;
     width: calc(100% - 36px);
-    margin: 0 auto;
     color: $white;
     position: relative;
+    max-width: 400px;
+    margin-bottom: 54px;
+    margin-right: 16px;
 
-    @include media-breakpoint-up(md) {
-      max-width: 480px;
-      margin-bottom: 54px;
+    @include media-breakpoint-up(xl) {
       margin-right: 98px;
+      max-width: 480px;
     }
   }
 
   &__title {
-    font-size: 44px;
     font-weight: bold;
     line-height: 0.67;
     letter-spacing: 0.3px;
     margin-bottom: 84px;
-
-    @include media-breakpoint-up(md) {
-      font-size: 64px;
-    }
+    font-size: 64px;
   }
 
   &__sentence {
@@ -44,7 +54,7 @@
     letter-spacing: 0.1px;
     margin-bottom: 30px;
 
-    @include media-breakpoint-up(md) {
+    @include media-breakpoint-up(xl) {
       font-size: 32px;
     }
 
@@ -55,9 +65,9 @@
       line-height: 0.66;
       letter-spacing: 6.7px;
       position: absolute;
-      left: -10px;
+      left: 10px;
 
-      @include media-breakpoint-up(md) {
+      @include media-breakpoint-up(xl) {
         font-size: 134px;
         left: -30px;
       }
