--- a/src/assets/styles/constants/_breakpoints.scss
+++ b/src/assets/styles/constants/_breakpoints.scss
@@ -8,7 +8,7 @@ $grid-breakpoints: (
 
 // Breakpoint viewport sizes and media queries.
 //
-// Breakpoints are defined as a map of (name: minimum width), order from small to large:
+// Breakpoints are defined as a map of (firstName: minimum width), order from small to large:
 //
 //    (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px)
 //
@@ -50,7 +50,7 @@ $grid-breakpoints: (
   @return if($next, breakpoint-min($next, $breakpoints) - .02px, null);
 }
 
-// Returns a blank string if smallest breakpoint, otherwise returns the name with a dash infront.
+// Returns a blank string if smallest breakpoint, otherwise returns the firstName with a dash infront.
 // Useful for making responsive utilities.
 //
 //    >> breakpoint-infix(xs, (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px))
